Fix CORS property name mismatch